# sof_app

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  Run SOF Desktop.bat  SOF-Calculator.spec  SOF_Method_App.spec  pyproject.toml  pyproject.toml.bak  repo_manifest.json  repo_tree.txt  requirements.txt  run_desktop.ps1  tree_ci.txt  tree_data.txt  tree_src.txt  tree_tests.txt
.github/: SECURITY.md
.github/workflows/: ci.yml
data/: SOF_Operators_Quick_Guide.md  example_limits.csv  example_samples.csv  nuclide_aliases.csv  test_limits.csv  test_limits_isotopes_double_list_with_activity.csv  test_random_isotopes_activity.csv  test_samples.csv
data/schema/: audit_schema.json  limits_schema.json
docs/: IT-Validation.md
src/sof_app/: __init__.py  ui_qt.py  version.py
src/sof_app/core/: exceptions.py  models.py  units.py
src/sof_app/io/: excel_loader.py  exporters.py
src/sof_app/services/: aliases.py  audit.py  matching.py  sof.py
src/sof_app/ui/: app.py
tests/: conftest.py  test_audit_schema_validate.py  test_counts_blocked.py  test_excel_sof_integration.py  test_matching.py  test_sof.py  test_surface_norm.py  test_units.py
tools/: release-verify.ps1
