[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sof-app"
version = "0.1.2"
description = "Sum of Fractions (SOF) calculator (limits vs measured concentrations)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pint>=0.23",
  "uncertainties>=3.1",
  "openpyxl>=3.1",
  "matplotlib>=3.8"
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"sof_app" = ["assets/**"]
